{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 49,
  "lineage": "581a9485-1f89-9608-ad06-07be8a1b7ba2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "albs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "external-alb",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:loadbalancer/app/external-alb/dd9420bad40d9ffb",
            "arn_suffix": "app/external-alb/dd9420bad40d9ffb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "external-alb-1770654954.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:168126498686:loadbalancer/app/external-alb/dd9420bad40d9ffb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "external-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b3ec41c28102b4d8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004d7b29c62d44e99"
              },
              {
                "subnet_id": "subnet-0b34ffafb5589bc62"
              }
            ],
            "subnets": [
              "subnet-004d7b29c62d44e99",
              "subnet-0b34ffafb5589bc62"
            ],
            "tags": {
              "Name": "external-alb"
            },
            "tags_all": {
              "Name": "external-alb"
            },
            "vpc_id": "vpc-0d8e866f73db7e7dd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        },
        {
          "index_key": "int-alb",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:loadbalancer/app/int-alb/c22290ec44452980",
            "arn_suffix": "app/int-alb/c22290ec44452980",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-int-alb-1467070938.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:168126498686:loadbalancer/app/int-alb/c22290ec44452980",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "int-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b3ec41c28102b4d8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-086d864e41a626cd5"
              },
              {
                "subnet_id": "subnet-0ab13dd65be98c019"
              }
            ],
            "subnets": [
              "subnet-086d864e41a626cd5",
              "subnet-0ab13dd65be98c019"
            ],
            "tags": {
              "Name": "int-alb"
            },
            "tags_all": {
              "Name": "int-alb"
            },
            "vpc_id": "vpc-0d8e866f73db7e7dd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "external-alb",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:listener/app/external-alb/dd9420bad40d9ffb/17b05c2663d05a4e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "No route matched",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:168126498686:listener/app/external-alb/dd9420bad40d9ffb/17b05c2663d05a4e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:loadbalancer/app/external-alb/dd9420bad40d9ffb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.albs",
            "aws_security_group.alb_sg"
          ]
        },
        {
          "index_key": "int-alb",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:listener/app/int-alb/c22290ec44452980/1c99deaab4f8e2d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "No route matched",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:168126498686:listener/app/int-alb/c22290ec44452980/1c99deaab4f8e2d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:loadbalancer/app/int-alb/c22290ec44452980",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.albs",
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "client-portal",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:targetgroup/client-portal-tg/4cb60f3aafa56511",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:listener-rule/app/external-alb/dd9420bad40d9ffb/17b05c2663d05a4e/04d6b738b264ab31",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "dev.theblackrise.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:168126498686:listener-rule/app/external-alb/dd9420bad40d9ffb/17b05c2663d05a4e/04d6b738b264ab31",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:listener/app/external-alb/dd9420bad40d9ffb/17b05c2663d05a4e",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.albs",
            "aws_lb_listener.http",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "data.aws_ecr_image.latest_images"
          ]
        },
        {
          "index_key": "events-service",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:targetgroup/events-service-tg/8fccfe4aa0916e78",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:listener-rule/app/int-alb/c22290ec44452980/1c99deaab4f8e2d9/f175a83a55a1e28b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/events-service"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:168126498686:listener-rule/app/int-alb/c22290ec44452980/1c99deaab4f8e2d9/f175a83a55a1e28b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:listener/app/int-alb/c22290ec44452980/1c99deaab4f8e2d9",
            "priority": 101,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.albs",
            "aws_lb_listener.http",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "data.aws_ecr_image.latest_images"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "client-portal",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:targetgroup/client-portal-tg/4cb60f3aafa56511",
            "arn_suffix": "targetgroup/client-portal-tg/4cb60f3aafa56511",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:168126498686:targetgroup/client-portal-tg/4cb60f3aafa56511",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:168126498686:loadbalancer/app/external-alb/dd9420bad40d9ffb"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "client-portal-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d8e866f73db7e7dd"
          }
        },
        {
          "index_key": "events-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168126498686:targetgroup/events-service-tg/8fccfe4aa0916e78",
            "arn_suffix": "targetgroup/events-service-tg/8fccfe4aa0916e78",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:168126498686:targetgroup/events-service-tg/8fccfe4aa0916e78",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:168126498686:loadbalancer/app/int-alb/c22290ec44452980"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "events-service-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d8e866f73db7e7dd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168126498686:security-group/sg-0b3ec41c28102b4d8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3ec41c28102b4d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "168126498686",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8e866f73db7e7dd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "external-cluster",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168126498686:security-group/sg-0362d61d96b05cc80",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0362d61d96b05cc80",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3ec41c28102b4d8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-sg-external-cluster",
            "name_prefix": "",
            "owner_id": "168126498686",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-task-sg-external-cluster"
            },
            "tags_all": {
              "Name": "ecs-task-sg-external-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8e866f73db7e7dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        },
        {
          "index_key": "internal-cluster",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168126498686:security-group/sg-02bd4c936f6bc6437",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bd4c936f6bc6437",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3ec41c28102b4d8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-sg-internal-cluster",
            "name_prefix": "",
            "owner_id": "168126498686",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-task-sg-internal-cluster"
            },
            "tags_all": {
              "Name": "ecs-task-sg-internal-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8e866f73db7e7dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    }
  ]
}